--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<ul class="nav nav-tabs" role="tablist">
 						<li role="presentation" class="active"><a href="#home">Home</a></li>
 						<li role="presentation" ><a href="#motivo">Motivação</a></li>
-						<li role="presentation" ><a href="#">Arquitetura</a></li>
+						<li role="presentation" ><a href="#arquitetura">Arquitetura</a></li>
 						<li role="presentation" ><a href="#">Estudo de caso</a></li>
 						<li role="presentation" ><a href="#">Vídeo Demo</a></li>
 						<li role="presentation" ><a href="#galeria">Galeria</a></li>
@@ -82,7 +82,19 @@
 			<div class="col-md-6 col-md-offset-3">
 				<div class="text-center">
 					<h2><i>Motivação</i></h2>
-					<p>Um Portal Semântico baseada em Ontologias e Dados Interligados para Acesso, Integração e Visualização de Dados do SUS</p>
+					<p>COLOCAR A MOTIVAÇÃO</p>
+				</div>
+				<hr>
+			</div>
+		</div>
+	</div>
+	<div class="container" id="arquitetura">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<div class="text-center">
+					<h2><i>Arquitetura</i></h2>
+					<p>COLOCAR A Arquitetura</p>
+					<img src="img/arquitetura_portal.png">
 				</div>
 				<hr>
 			</div>
