--- a/index.html
+++ b/index.html
@@ -42,41 +42,58 @@
 						<li role="presentation" class="active"><a href="#home">Home</a></li>
 						<li role="presentation" ><a href="#motivo">Motivação</a></li>
 						<li role="presentation" ><a href="#arquitetura">Arquitetura</a></li>
-						<li role="presentation" ><a href="#">Estudo de caso</a></li>
-						<li role="presentation" ><a href="#">Vídeo Demo</a></li>
+						<li role="presentation" ><a href="#estudo">Estudo de caso</a></li>
+						<li role="presentation" ><a href="#demo">Vídeo Demo</a></li>
 						<li role="presentation" ><a href="#galeria">Galeria</a></li>
+						<li role="presentation" ><a href="#contato">Contato</a></li>
 					</ul>
 				</div>
 			</div>			
 		</div>
 	</nav>
 	
+
+
+
+
+
+
+
 	
 	<div class="container" id="home">
 		<div class="row">
 			<div class="slider">
 				<div class="img-responsive">
 					<ul class="bxslider">				
-						<li><img src="img/01.jpg" alt=""/></li>								
-						<li><img src="img/01.jpg" alt=""/></li>	
-						<li><img src="img/01.jpg" alt=""/></li>			
+						<li><img src="img/query.png" alt=""/></li>								
+						<li><img src="img/query.png" alt=""/></li>	
+						<li><img src="img/query.png" alt=""/></li>			
 					</ul>
 				</div>	
 			</div>
 		</div>
-	</div>
-		
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<div class="text-center">
-					<h2><i>SemanticSUS</i></h2>
-					<p>Um Portal Semântico baseada em Ontologias e Dados Interligados para Acesso, Integração e Visualização de Dados do SUS</p>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3">
+					<div class="text-center">
+						<h2><i>SemanticSUS</i></h2>
+						<p>Um Portal Semântico baseada em Ontologias e Dados Interligados para Acesso, Integração e Visualização de Dados do SUS</p>
+					</div>
+					<hr>
 				</div>
-				<hr>
 			</div>
 		</div>
 	</div>
+		
+
+
+
+
+
+
+
+
 	<div class="container" id="motivo">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
@@ -88,18 +105,37 @@
 			</div>
 		</div>
 	</div>
+
+
+
+
+
+
+
+
+
 	<div class="container" id="arquitetura">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<div class="text-center">
 					<h2><i>Arquitetura</i></h2>
 					<p>COLOCAR A Arquitetura</p>
-					<img src="img/arquitetura_portal.png">
+					<figure class="effect-zoe">
+						<img src="img/arquitetura_portal.png" alt="arquitetura do portal semântico"/>		
+					</figure>
 				</div>
 				<hr>
 			</div>
 		</div>
 	</div>
+
+
+
+
+
+
+
+
 	<div class="container" >
 		<div class="row">
 			<div class="box">
@@ -146,12 +182,56 @@
 			</div>
 		</div>
 	</div>
-	
-	<div class="container">
+
+
+
+
+
+
+
+
+	<div class="container" id="estudo">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<div class="text-center">
-					<h2>Galleries</h2>
+					<h2><i>Estudo de Caso</i></h2>
+					<p>COLOCAR ESTUDO DE CASO</p>
+				</div>
+				<hr>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+	<div class="container" id="demo">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<div class="text-center">
+					<p>COLOCAR DEMO</p>
+				</div>
+				<hr>
+			</div>
+		</div>
+	</div>
+	
+
+
+
+
+
+
+	<div id="galeria" class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<div class="text-center">
+					<h2>Galeria</h2>
 					<p>Lorem ipsum dolor sit amet consectetur adipiscing elit Cras suscipit arcu<br>
 					vestibulum volutpat libero sollicitudin vitae Curabitur ac aliquam <br>
 					</p>
@@ -159,25 +239,23 @@
 				<hr>
 			</div>
 		</div>
-	</div>
-	<dir id="galeria">
-		
+
 		<div class="content">
 			<div class="grid">
 				<figure class="effect-zoe">
-					<img src="img/25.jpg" alt="img25"/>
+					<img src="img/query.png" alt="consulta"/>
 					<figcaption>
-						<h2>Title <span>Name</span></h2>
+						<h2>Consulta <span>SPARQL</span></h2>
 						<p class="icon-links">
 							<a href="#"><span class="icon-heart"></span></a>
 							<a href="#"><span class="icon-eye"></span></a>
 							<a href="#"><span class="icon-paper-clip"></span></a>
 						</p>
-						<p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+						<p class="description">Consultando as fontes de Dados através da Camada Ontológica.</p>
 					</figcaption>			
 				</figure>
 				<figure class="effect-zoe">
-					<img src="img/26.jpg" alt="img26"/>
+					<img src="img/qureyResult.png" alt="resultados"/>
 					<figcaption>
 						<h2>Title <span>Name</span></h2>
 						<p class="icon-links">
@@ -185,7 +263,7 @@
 							<a href="#"><span class="icon-eye"></span></a>
 							<a href="#"><span class="icon-paper-clip"></span></a>
 						</p>
-						<p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+						<p class="description">Resultado de uma consulta SPARQL sobre a camada ontológica.</p>
 					</figcaption>			
 				</figure>
 			</div>
@@ -219,34 +297,23 @@
 				</figure>
 			</div>
 		</div>
-	</dir>
+	</div>
+	
+	
 	
 	<footer>
-		<div class="inner-footer">
+		<div id="contato" class="inner-footer">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 f-about">
-						<a href="index.html"><h1><span>e</span>Nno</h1></a>
-						<p>Lorem ipsum dolor sit amet consectetur adipiscing elit Cras suscipit arcu libero
-						vestibulum volutpat libero sollicitudin vitae Curabitur ac aliquam  consectetur adipiscing elit Cras suscipit arcu libero
+						<a href="index.html"><h1><span>Semantic</span>SUS</h1></a>
+						<p>O Portal SemanticSUS é baseado em um enfoque que combina ontologias e Dados Interligados para enfrentar os desafios no desenvolvimento de aplicações onde existe a necessidade de integrar fontes de dados heterogêneas. O SemanticSUS tem como principal objetivo oferecer uma camada ontológica, conectada semanticamente aos dados, e que permita o acesso integrado aos dados. A plataforma disponibiliza também o serviço de integração semântica baseado na abordagem "pay-as-you-go", o que garante flexibilidade e extensibilidade suficientes para que novas fontes de dados possam ser adicionadas ao portal. Outra facilidade do portal é a ferramenta Mashup Buider", a qual permite a construção de Mashup de Dados de forma simples e automática.
 						</p>
 					</div>
-					<div class="col-md-4 l-posts">
-						<h3 class="widgetheading">Latest Posts</h3>
-						<ul>
-							<li><a href="#">This is awesome post title</a></li>
-							<li><a href="#">Awesome features are awesome</a></li>
-							<li><a href="#">Create your own awesome website</a></li>
-							<li><a href="#">Wow, this is fourth post title</a></li>
-						</ul>
-					</div>
 					<div class="col-md-4 f-contact">
-						<h3 class="widgetheading">Stay in touch</h3>
-						<a href="#"><p><i class="fa fa-envelope"></i> example@gmail.com</p></a>
-						<p><i class="fa fa-phone"></i>  +345 578 59 45 416</p>
-						<p><i class="fa fa-home"></i> Enno inc  |  PO Box 23456 
-							Little Lonsdale St, New York <br>
-							Victoria 8011 USA</p>
+						<h3 class="widgetheading">Contato</h3>
+						<a href="#"><p><i class="fa fa-envelope"></i> semanticSUS@gmail.com</p></a>
+						
 					</div>
 				</div>
 			</div>
@@ -268,13 +335,7 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook fa-1x"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter fa-1x"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin fa-1x"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest fa-1x"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus fa-1x"></i></a></li>
-					</ul>
+					
 				</div>
 			</div>
 			
