--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<li role="presentation" ><a href="#arquitetura">Arquitetura</a></li>
 						<li role="presentation" ><a href="#estudo">Estudo de caso</a></li>
 						<li role="presentation" ><a href="#demo">Vídeo Demo</a></li>
-						<li role="presentation" ><a href="#galeria">Galeria</a></li>
+						<!--<li role="presentation" ><a href="#galeria">Galeria</a></li>-->
 						<li role="presentation" ><a href="#contato">Contato</a></li>
 					</ul>
 				</div>
@@ -226,7 +226,7 @@
 
 
 
-
+	<!--
 	<div id="galeria" class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
@@ -298,7 +298,7 @@
 			</div>
 		</div>
 	</div>
-	
+	-->
 	
 	
 	<footer>
