--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SemanticSUS</title>
+    <title>SemanticSUS - Home</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -40,12 +40,10 @@
 				<div class="menu">
 					<ul class="nav nav-tabs" role="tablist">
 						<li role="presentation" class="active"><a href="#home">Home</a></li>
-						<li role="presentation" ><a href="#motivo">Motivação</a></li>
-						<li role="presentation" ><a href="#arquitetura">Arquitetura</a></li>
-						<li role="presentation" ><a href="#estudo">Estudo de caso</a></li>
-						<li role="presentation" ><a href="#demo">Vídeo Demo</a></li>
+						<li role="presentation" ><a href="arquitetura.html">Arquitetura</a></li>
+						<li role="presentation" ><a href="is.html">Integração semântica</a></li>
+						<li role="presentation" ><a href="id.html">Integração de dados</a></li>
 						<!--<li role="presentation" ><a href="#galeria">Galeria</a></li>-->
-						<li role="presentation" ><a href="#contato">Contato</a></li>
 					</ul>
 				</div>
 			</div>			
@@ -75,10 +73,18 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3">
+				<div >
 					<div class="text-center">
 						<h2><i>SemanticSUS</i></h2>
-						<p>Um Portal Semântico baseada em Ontologias e Dados Interligados para Acesso, Integração e Visualização de Dados do SUS</p>
+						<h3 class="subtitulo">Um Portal Semântico baseada em Ontologias e Dados Interligados para Acesso, Integração e Visualização de Dados do SUS</h3>
+						 <p class="textForRead">
+			                O <i>SemanticSUS</i>, um portal semântico para acesso, analise e visualização de grande quantidade de dados do Sistema Único de Saúde (SUS).
+			                O Portal SemanticSUS é baseado em um enfoque que combina ontologias e Dados Interligados para enfrentar os desafios no desenvolvimento de aplicações onde existe a necessidade de integrar fontes de dados heterogêneas.
+			                O SemanticSUS tem como principal objetivo oferecer uma camada ontológica, conectada semanticamente aos dados, e que permita o acesso integrado aos dados.
+			                A plataforma disponibiliza também o serviço de integração semântica baseado na abordagem <i>pay-as-you-go</i>, o que garante flexibilidade e extensibilidade suficientes para que novas fontes de dados possam ser adicionadas ao portal.
+			                Outra facilidade do portal é a ferramenta <i>Mashup Buider</i>, a qual permite a construção de Mashup de Dados de forma simples e automática.
+			            </p>
+			            <br>
 					</div>
 					<hr>
 				</div>
@@ -94,7 +100,7 @@
 
 
 
-	<div class="container" id="motivo">
+	<!-- <div class="container" id="motivo">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<div class="text-center">
@@ -202,7 +208,7 @@
 		</div>
 	</div>
 
-
+ -->
 
 
 
@@ -307,8 +313,7 @@
 				<div class="row">
 					<div class="col-md-4 f-about">
 						<a href="index.html"><h1><span>Semantic</span>SUS</h1></a>
-						<p>O Portal SemanticSUS é baseado em um enfoque que combina ontologias e Dados Interligados para enfrentar os desafios no desenvolvimento de aplicações onde existe a necessidade de integrar fontes de dados heterogêneas. O SemanticSUS tem como principal objetivo oferecer uma camada ontológica, conectada semanticamente aos dados, e que permita o acesso integrado aos dados. A plataforma disponibiliza também o serviço de integração semântica baseado na abordagem "pay-as-you-go", o que garante flexibilidade e extensibilidade suficientes para que novas fontes de dados possam ser adicionadas ao portal. Outra facilidade do portal é a ferramenta Mashup Buider", a qual permite a construção de Mashup de Dados de forma simples e automática.
-						</p>
+						
 					</div>
 					<div class="col-md-4 f-contact">
 						<h3 class="widgetheading">Contato</h3>
