menu com mais opcoes

--- a/mashup_builder.html
+++ b/mashup_builder.html
@@ -16,10 +16,12 @@
 
 	        <div class="collapse navbar-collapse">
 	            <ul class="navbar-nav mr-auto">
-	                <li class="nav-item navoption"><a class="nav-link" href="/">Home</a></li>
-	                <li class="nav-item navoption"><a class="nav-link" href="/is.html">Integração Semântica</a></li>
-	                <li class="nav-item navoption"><a class="nav-link" href="/mediador_semantico.html">Mediador Semântico</a></li>
-	                <li class="nav-item navoption"><a class="nav-link" href="/mashup_builder.html">MashupBuilder</a></li>
+	                <li class="nav-item navoption"><a class="nav-link" href="index.html">Inicio</a></li>
+	                <li class="nav-item navoption"><a class="nav-link" href="visao_semantica.html">Visão Semântica</a></li>
+	                <li class="nav-item navoption"><a class="nav-link" href="edit_vis.html">Editar VS</a></li>
+	                <li class="nav-item navoption"><a class="nav-link" href="mediador_semantico.html">Mediador Semântico</a></li>
+	                <li class="nav-item navoption"><a class="nav-link" href="mashup_builder.html">Mashup Builder</a></li>
+	                <li class="nav-item navoption"><a class="nav-link" href="mashup_especializado.html">Mashups Especializados</a></li>
 	            </ul>
 	        </div>
 	    </nav>
@@ -27,13 +29,13 @@
 
 	<div class="container">
 
-			
+<!--			
 		<div class="textForRead">
 			<h2 class="sectionOfText"><i>Integração de Dados</i></h2>
 			<p>O resultado obtido na camada de integração semântica é utilizado na construção de uma visão homogênea sobre os dados. Essa visão pode utilizar um enfoque virtual (Mediador Semântico) ou um enfoque materializado (Mashup de Dados) para prover acesso aos dados.</p>
 		</div>
 		<hr>
-
+-->
 
 			
 		
