--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                <ul class="navbar-nav mr-auto">
                    <li class="nav-item navoption"><a class="nav-link" href="index.html">Inicio</a></li>
                    <li class="nav-item navoption"><a class="nav-link" href="visao_semantica.html">Visão Semântica</a></li>
-                   <li class="nav-item navoption"><a class="nav-link" href="edit_vis.html">Editar VS</a></li>
+                   <li class="nav-item navoption"><a class="nav-link" href="edit_vis.html">Editar Visão</a></li>
                    <li class="nav-item navoption"><a class="nav-link" href="mediador_semantico.html">Mediador Semântico</a></li>
                    <li class="nav-item navoption"><a class="nav-link" href="mashup_builder.html">Mashup Builder</a></li>
                    <li class="nav-item navoption"><a class="nav-link" href="mashup_especializado.html">Mashups Especializados</a></li>
@@ -63,6 +63,7 @@
             O SemanticSUS tem como principal objetivo oferecer uma camada ontológica, conectada semanticamente aos dados, e que permita o acesso integrado aos dados.
             A plataforma disponibiliza também o serviço de integração semântica baseado na abordagem <i>pay-as-you-go</i>, o que garante flexibilidade e extensibilidade suficientes para que novas fontes de dados possam ser adicionadas ao portal.
             Outra facilidade do portal é a ferramenta <i>Mashup Buider</i>, a qual permite a construção de Mashup de Dados de forma simples e automática.
+            <img alt="Arquitetura Portal" class="rounded mx-auto d-block" src="img/visaosemantica.png">
         </div>
     </div>
 
@@ -101,7 +102,7 @@
     <div id="consultando_visao">
         <p class="sectionOfText">4. Consultando as fontes de dados através da Visão Semântica </p>
         <div class="textForRead">
-            
+            O Mediador Semântico (MS) é um sistema que  permite que sejam realizadas  consultas às fontes de dados através da Visão Ontológica definida pela integração semântica. A visão ontológica provê um único ponto de acesso aos dados,  e permite que consultas sejam formuladas em termos da ontologia de domínio, de forma que o usuário não precisa entender das fontes de dados, nem das relações entre elas, e a resposta é recebida de forma inteligível.  <a href="mediador_semantico.html">(Ler mais sobre)</a>
         </div>
     </div>
     <br/>
