--- a/visao_semantica.html
+++ b/visao_semantica.html
@@ -18,7 +18,7 @@
 	            <ul class="navbar-nav mr-auto">
 	                <li class="nav-item navoption"><a class="nav-link" href="index.html">Inicio</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="visao_semantica.html">Visão Semântica</a></li>
-	                <li class="nav-item navoption"><a class="nav-link" href="edit_vis.html">Editar VS</a></li>
+	                <li class="nav-item navoption"><a class="nav-link" href="edit_vis.html">Editar Visão</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="mediador_semantico.html">Mediador Semântico</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="mashup_builder.html">Mashup Builder</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="mashup_especializado.html">Mashups Especializados</a></li>
@@ -35,8 +35,18 @@
 
 
 	<div class="container">
+
+        <p class="sectionOfText">
+            1. Ontologia de Dominio
+        </p>
+        <a href="https://www.dropbox.com/s/s1axrccurmgmczk/domain_ontology.owl?dl=1" download>Download ontologia em OWL</a>
+        <p>Representação visual da ontologia de Dominio:</p>
+        <img class="rounded text-left d-block" src="img/ontologiadominio.png" style="width:70%"/>
+        <br>
+
+
 		<p class="sectionOfText">
-            1. Bases Utilizadas
+            2. Bases Utilizadas
         </p>
         <p class="textForRead">
             <p class="subSectionOfText">1.1 SIM</p>
@@ -46,17 +56,10 @@
         </p>
         <br>
 
-        <p class="sectionOfText">
-            2. Ontologia de Dominio
-        </p>
-        <a href="https://www.dropbox.com/s/s1axrccurmgmczk/domain_ontology.owl?dl=1" download>Download ontologia em OWL</a>
-        <p>Representação visual da ontologia de Dominio:</p>
-        <img class="rounded text-left d-block" src="img/ontologiadominio.png" style="width:70%"/>
-        <br>
 
         <p class="sectionOfText">
             <a name="linkssemanticos" id="linkssemanticos"></a>
-            3. Visões Virtuais Exportadas
+            3. Visões Virtuais Locais
         </p>
 
         <p>
@@ -78,7 +81,7 @@
         <br>
 
         <p class="sectionOfText">
-            4. Links Semânticos
+            4. Regras de Linkage
         </p>
         <a href="https://www.dropbox.com/s/lo08owrhuzkg7xn/deterministico.xml?dl=1" download>Download Especificação SILK</a>
         <p>Representação visual dos links semânticos:</p>
@@ -86,7 +89,7 @@
         <br>
 
         <p class="sectionOfText">
-            5. Fusão de Dados e Critérios de Qualidade
+            5. Regras de Fusão
         </p>
         <p class="textForRead">
             <a href="https://www.dropbox.com/s/358clk4oe65ymts/sieve-config.xml?dl=1" download>Download Especificação Sieve</a>
