--- a/mashup_builder.html
+++ b/mashup_builder.html
@@ -18,7 +18,7 @@
 	            <ul class="navbar-nav mr-auto">
 	                <li class="nav-item navoption"><a class="nav-link" href="index.html">Inicio</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="visao_semantica.html">Visão Semântica</a></li>
-	                <li class="nav-item navoption"><a class="nav-link" href="edit_vis.html">Editar VS</a></li>
+	                <li class="nav-item navoption"><a class="nav-link" href="edit_vis.html">Editar Visão</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="mediador_semantico.html">Mediador Semântico</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="mashup_builder.html">Mashup Builder</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="mashup_especializado.html">Mashups Especializados</a></li>
@@ -29,38 +29,31 @@
 
 	<div class="container">
 
-<!--			
+		<div class="sectionOfText"><i>Mashup Builder</i></div>
 		<div class="textForRead">
-			<h2 class="sectionOfText"><i>Integração de Dados</i></h2>
-			<p>O resultado obtido na camada de integração semântica é utilizado na construção de uma visão homogênea sobre os dados. Essa visão pode utilizar um enfoque virtual (Mediador Semântico) ou um enfoque materializado (Mashup de Dados) para prover acesso aos dados.</p>
-		</div>
-		<hr>
--->
-
-			
+			<p>Uma das facilidades do <i>SemanticSUS</i> é a ferramenta <i>Mashup Builder</i>, uma ferramenta que permite a construção automática de <i>mashup</i> de dados especializado usando a integração semântica à priori das fontes de dados. Como mostrado na Figura abaixo</i>, o <i>Mashup Builder</i> recebe como entrada a especificação da visão de aplicação sobre a ontologia de domínio, e baseado na integração semântica, e realiza a materialização do <i>mashup</i> especializado requerido pelo usuário.</p>
 		
-		<div class="textForRead">
-			<h3><i>Mediador semântico</i></h3>
-			<p>O Mediador Semântico (MS) é um sistema que  permite que sejam realizadas  consultas às fontes de dados através da Visão Ontológica definida pela integração semântica. A visão ontológica provê um único ponto de acesso aos dados,  e permite que consultas sejam formuladas em termos da ontologia de domínio, de forma que o usuário não precisa entender das fontes de dados, nem das relações entre elas, e a resposta é recebida de forma inteligível.</p><br/><br/>
-			A arquitetura do MS pode ser vista a seguir:
-			<div class="content">
-				<div class="grid">
-					<figure class="effect-zoe">
-						<img src="img/ms.png" alt="arquitetura do mediador semântico"/>
-						<figcaption>
-							<h2><span><i>Mediador Semântico</i></span></h2>
-							<p class="description">Arquitetura do <i>Mediador Semântico</i>.</p>
-						</figcaption>			
-					</figure>
-					<ul class="left">
-						<li><b>Ontop:</b>Ontop é responsável por oferecer uma visão conceitual semântica dos dados integrados seguindo a ontologia de domínio. Ontop recebe uma consulta SPARQL sobre a ontologia de domínio e a traduz para uma consulta SQL sobre o esquema relacional global definido em Teiid. O processo de tradução da consulta é feito por meio dos mapeamentos das visões exportadas definidas na especificação da integração semântica. Além disso, Ontop é responsável por receber o resultado da consulta SQL retornada por Teiid e transformá-lo no formato solicitado pela consulta SPARQL.</li>
-						<li><b>Teiid:</b>Teiid oferece uma abstração de banco relacional, oferecendo uma visão global unificada das múltiplas fontes relacionais como um único esquema. Teiid gerencia o processamento de consultas federadas, recebendo uma consulta SQL sobre seu esquema global e a traduz em múltiplas consultas SQLs sobre as múltiplas fontes originais.</li>
-					</ul>
-				</div>
-			</div>
+		
+			
+			<div class="lead">Passo a passo do mashup builder:</div>
+			<img src="img/mashup_builder.png" alt="passos masup builder"/>
 
+			<ol>
+				<li>Primeiro, o usuário deve especificar a necessidade de informação da aplicação  através de uma consulta (facetada) definida sobre a ontologia de domínio.</li>
+				
+				<li>Em seguida, baseado na consulta definida no passo 1 e no resultado da integração semântica do SIM e SINASC, a ferramenta  gera automáticamente  a especificação da visão do mashup sobre as fontes de dados.</li>
+				
+				<li>Por fim, a ferramenta realiza a materialização da Visão do mashup em 3 passos: 
+					<ul>
+					<li> Primeiro, as visões exportadas são materializadas D2RQ usando mapeamentos R2RML que mapeiam os dados das fontes de dados SIM e SINASC em instâncias das visões exportadas por estas fontes. 
+					</li>
+					<li> Em seguida, os links sameAs entre instâncias das classes sim:PessoaMorta e  sinasc:RN são gerados pela ferramenta SILK, de acordo com a regra de linkage L<sub>RMN</sub> definida na visão semântica. </li>
+					<li> Por último, é realizada a fusão dos objetos - relacionados através de um link sameAS - em uma única representação. O processo de fusão é realizado pela ferramenta SIEVE. </li>
+					</ul>
+				</li>
+			</ol>
+			
 		</div>
-		<hr>
 
 
 	</div>
