--- a/visao_semantica.html
+++ b/visao_semantica.html
@@ -46,13 +46,26 @@
 
 
 		<p class="sectionOfText">
-            2. Bases Utilizadas
+            2. Bases Publicadas
         </p>
         <p class="textForRead">
             <p class="subSectionOfText">1.1 SIM</p>
-            <p> Sistema de Informações sobre Mortalidade</p>
+            O Sistema de Informação Sobre Mortalidade (SIM), desenvolvido pelo Ministério da Saúde, em 1975, é produto da unificação de mais de quarenta modelos de instrumentos utilizados, ao longo dos anos, para coletar dados sobre mortalidade no país. Possui variáveis que permitem, a partir da causa mortis atestada pelo médico, construir indicadores e processar análises epidemiológicas que contribuam para a eficiência da gestão em saúde.
+
+            O SIM foi informatizado em 1979. Doze anos depois, com a implantação do SUS e sob a premissa da descentralização teve a coleta de dados repassada à atribuição dos Estados e Municípios, através das suas respectivas Secretarias de Saúde. Com a finalidade de reunir dados quantitativos e qualitativos sobre óbitos ocorridos no Brasil, o SIM é considerado uma importante ferramenta de gestão na área da saúde que subsidiam a tomada de decisão em diversas áreas da assistência à saúde. No nível federal, sua gestão está afeta à Secretaria de Vigilância à Saúde.
+
+            O Sistema de informações sobre mortalidade dispõe de um ambiente de compartilhamento de informações on-line com diversas utilidades e aplicações. O acesso a este ambiente é restrito a pessoas cadastradas, para garantir a confidencialidade dos dados pessoais dos envolvidos nos registros. 
+            (<a href="http://svs.aids.gov.br/dantps/cgiae/sim/apresentacao/">Fonte</a>)
+            <br/><br/>
+
+            
+
             <p class="subSectionOfText">1.2 SINASC</p>
-            <p> Sistema de Informações sobre Nascidos Vivos</p>
+            O Sistema de Informações sobre Nascidos Vivos (SINASC), foi implantado oficialmente a partir de 1990, com o objetivo de coletar dados sobre os nascimentos informados em todo território nacional e fornecer dados sobre natalidade para todos os níveis do Sistema de Saúde.
+
+            A Secretaria de Vigilância em Saúde (SVS/MS) é gestora no Nível Nacional, sendo de sua responsabilidade, mais especificamente da Coordenação-Geral de Informações e Análises Epidemiológicas (CGIAE) e do Departamento de Vigilância de Doenças e Agravos não Transmissíveis e Promoção da Saúde (DANTPS) as alterações de layout bem como providências para impressão e distribuição dos formulários de Declaração de Nascido Vivo (DN) e dos manuais do Sistema. A implantação do SINASC ocorreu de forma gradual em todas as unidades da Federação e já vem apresentando em muitos municípios, desde o ano de 1994, um número maior de registros do que o publicado pelo IBGE com base nos dados de Cartório de Registro Civil. O Sistema possibilita, também, a construção de indicadores úteis para o planejamento de gestão dos serviços de saúde.
+            (<a href="http://svs.aids.gov.br/dantps/cgiae/sinasc/apresentacao/">Fonte</a>)
+            
         </p>
         <br>
 
