--- a/mashup_builder.html
+++ b/mashup_builder.html
@@ -33,11 +33,17 @@
 		<div class="textForRead">
 			<p>Uma das facilidades do <i>SemanticSUS</i> é a ferramenta <i>Mashup Builder</i>, uma ferramenta que permite a construção automática de <i>mashup</i> de dados especializado usando a integração semântica à priori das fontes de dados. Como mostrado na Figura abaixo</i>, o <i>Mashup Builder</i> recebe como entrada a especificação da visão de aplicação sobre a ontologia de domínio, e baseado na integração semântica, e realiza a materialização do <i>mashup</i> especializado requerido pelo usuário.</p>
 		
-		
+			<figure class="text-center">
+              <img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" src="img/mashup_builder.png" 
+              />
+              <figcaption class="figure-caption"><b><i>Figura 1: Construção de Mashup de Dados Especializado</i></b></figcaption>
+            </figure>
 			
-			<div class="lead">Passo a passo do mashup builder:</div>
-			<img src="img/mashup_builder.png" alt="passos masup builder"/>
+			
 
+			<br/>
+			<br/>
+			<div class="sectionOfText">Passo-a-passo do Mashup Builder:</div>
 			<ol>
 				<li>Primeiro, o usuário deve especificar a necessidade de informação da aplicação  através de uma consulta (facetada) definida sobre a ontologia de domínio.</li>
 				
